[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://ui/components/LadyLuckRewardPopup.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.10, 0.92)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.85, 0.65, 0.15, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="LadyLuckRewardPopup" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_script")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)
mouse_filter = 0

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
mouse_filter = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Margin" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "You Won!"
horizontal_alignment = 1

[node name="SlotCenter" type="CenterContainer" parent="CenterContainer/Panel/Margin/VBox"]
layout_mode = 2

[node name="RewardName" type="Label" parent="CenterContainer/Panel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
autowrap_mode = 2

[node name="RewardDesc" type="Label" parent="CenterContainer/Panel/Margin/VBox"]
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 2

[node name="PetBonusLabel" type="Label" parent="CenterContainer/Panel/Margin/VBox"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="ClaimBtn" type="Button" parent="CenterContainer/Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
text = "Claim"
